[gd_scene load_steps=14 format=2]

[ext_resource path="res://World/TeslaCoilRod.png" type="Texture" id=1]
[ext_resource path="res://World/TeslaCoilSwitch2.gd" type="Script" id=2]
[ext_resource path="res://World/TeslaCoilBase.png" type="Texture" id=3]
[ext_resource path="res://Effects/lightning_one_5_step.png" type="Texture" id=4]
[ext_resource path="res://Music and Sounds/electricity_glitch_11.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
height = 23.3333

[sub_resource type="CircleShape2D" id=2]
radius = 25.02

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 112, 112 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="TeslaCoilSwitch2" type="StaticBody2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -3, -30 )
rotation = 2.35619
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.66667, -8.33333 )
shape = SubResource( 1 )

[node name="SwitchArea2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwitchArea2D"]
position = Vector2( -3, -37 )
shape = SubResource( 2 )

[node name="Lightning1" type="AnimatedSprite" parent="."]
position = Vector2( 5, -68.3333 )
rotation = 0.261799
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
frame = 2
playing = true

[node name="Lightning2" type="AnimatedSprite" parent="."]
position = Vector2( 11.6667, -63.3333 )
rotation = 0.523599
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
frame = 1
playing = true

[node name="Lightning3" type="AnimatedSprite" parent="."]
position = Vector2( 16.6667, -56.6666 )
rotation = 0.785398
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
playing = true

[node name="Lightning4" type="AnimatedSprite" parent="."]
position = Vector2( -20, -56.6667 )
rotation = -0.785398
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
playing = true

[node name="Lightning5" type="AnimatedSprite" parent="."]
position = Vector2( -15, -63.3333 )
rotation = -0.523599
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
playing = true

[node name="Lightning6" type="AnimatedSprite" parent="."]
position = Vector2( -8.33333, -66.6667 )
rotation = -0.261799
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
frame = 4
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
pitch_scale = 0.8

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[connection signal="area_entered" from="SwitchArea2D" to="." method="_on_SwitchArea2D_area_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
